--- a/locale/hu/LC_MESSAGES/django.po
+++ b/locale/hu/LC_MESSAGES/django.po
@@ -211,6 +211,16 @@ msgstr "e-mail"
 msgid "Already %(volunteer_count)s volunteers signed up and worked %(volunteer_hours)s hours in total."
 msgstr ""
 
+#: templates/home.html:49
+#, python-format
+msgid "Info and registration"
+msgstr "Súgó és feliratkozás"
+
+#: templates/home.html:55
+#, python-format
+msgid "Login"
+msgstr "Belépés"
+
 #: templates/registration/password_change_done.html:3
 msgid "Password changed"
 msgstr "A jelszó megváltozott"
