--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -211,6 +211,20 @@ msgstr "E-Mail"
 msgid "Already %(volunteer_count)s volunteers signed up and worked %(volunteer_hours)s hours in total."
 msgstr "%(volunteer_count)s Freiwillige sind bereits registriert und haben %(volunteer_hours)s Stunden geholfen."
 
+#: templates/home.html:49
+#, python-format
+msgid "Info and registration"
+msgstr "Helfen und Registrieren"
+
+#: templates/home.html:55
+#, python-format
+msgid "Login"
+msgstr "Login"
+
+#: templates/home.html:62
+msgid "Frequently Asked Questions"
+msgstr "Häufig gestellte Fragen"
+
 #: templates/registration/password_change_done.html:3
 msgid "Password changed"
 msgstr "Passwort geändert"
