--- a/locale/hu/LC_MESSAGES/django.po
+++ b/locale/hu/LC_MESSAGES/django.po
@@ -10,10 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: volunteer-planner.org\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-25 16:59+0200\n"
+"POT-Creation-Date: 2015-09-27 16:05+0200\n"
 "PO-Revision-Date: 2015-09-25 14:58+0000\n"
 "Last-Translator: Christoph\n"
-"Language-Team: Hungarian (http://www.transifex.com/coders4help/volunteer-planner/language/hu/)\n"
+"Language-Team: Hungarian (http://www.transifex.com/coders4help/volunteer-"
+"planner/language/hu/)\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +67,8 @@ msgstr "Aktiváló e-mail újraküldése"
 
 #: registration/forms.py:35 tests/registration/test_registration.py:79
 msgid "This value may contain only letters, numbers and @/./+/-/_ characters."
-msgstr "Ez az érték csak betűt, számot és a @ . + - _ karaktereket tartalmazhatja"
+msgstr ""
+"Ez az érték csak betűt, számot és a @ . + - _ karaktereket tartalmazhatja"
 
 #: registration/forms.py:39
 msgid "Password"
@@ -82,7 +84,8 @@ msgstr "Ezzel a felhasználónévvel már létezik felhasználó."
 
 #: registration/forms.py:58
 msgid "A user with that email already exists. Please login instead."
-msgstr "Már létezik ellel az e-mail címmel felhasználó. Inkább jelentkezzen be!"
+msgstr ""
+"Már létezik ellel az e-mail címmel felhasználó. Inkább jelentkezzen be!"
 
 #: registration/forms.py:82
 msgid "I have read and agree to the Terms of Service"
@@ -93,12 +96,19 @@ msgid "You must agree to the terms to register"
 msgstr "Bele kell egyeznie a feltételekbe, hogy regisztrálhasson."
 
 #: registration/forms.py:99
-msgid "This email address is already in use. Please supply a different email address."
-msgstr "Ezt az e-mail címet már használják. Kérem, adjon meg másik e-mail címet."
+msgid ""
+"This email address is already in use. Please supply a different email "
+"address."
+msgstr ""
+"Ezt az e-mail címet már használják. Kérem, adjon meg másik e-mail címet."
 
 #: registration/forms.py:124
-msgid "Registration using free email addresses is prohibited. Please supply a different email address."
-msgstr "Ingyenes e-mail címmel nem engedélyezett a regisztráció. Kérem, adjon meg másik e-mail címet."
+msgid ""
+"Registration using free email addresses is prohibited. Please supply a "
+"different email address."
+msgstr ""
+"Ingyenes e-mail címmel nem engedélyezett a regisztráció. Kérem, adjon meg "
+"másik e-mail címet."
 
 #: registration/models.py:219
 msgid "user"
@@ -118,12 +128,22 @@ msgstr "Probléma van az aktivációval."
 
 #: registration/templates/activate.html:14
 #, python-format
-msgid "Thanks %(account)s, activation complete! You may now <a href='%(auth_login_url)s'>login</a> using the username and password you set at registration."
-msgstr "Köszönjük, %(account)s. Az aktiváció elkészült. Mostmár <a href='%(auth_login_url)s'>bejelentkezhet</a> a regisztrációkor megadott felhasználónévvel és jelszóval."
+msgid ""
+"Thanks %(account)s, activation complete! You may now <a "
+"href='%(auth_login_url)s'>login</a> using the username and password you set "
+"at registration."
+msgstr ""
+"Köszönjük, %(account)s. Az aktiváció elkészült. Mostmár <a "
+"href='%(auth_login_url)s'>bejelentkezhet</a> a regisztrációkor megadott "
+"felhasználónévvel és jelszóval."
 
 #: registration/templates/activate.html:19
-msgid "Oops &ndash; Either you activated your account already, or the activation key is invalid or has expired."
-msgstr "Hoppá &ndash; Ön már vagy előzőleg aktiválta a felhasználói fiókját, vagy az aktivációs kulcs érvénytelen, vagy lejárt."
+msgid ""
+"Oops &ndash; Either you activated your account already, or the activation "
+"key is invalid or has expired."
+msgstr ""
+"Hoppá &ndash; Ön már vagy előzőleg aktiválta a felhasználói fiókját, vagy az "
+"aktivációs kulcs érvénytelen, vagy lejárt."
 
 #: registration/templates/login.html:15
 msgid "Your username and password didn't match. Please try again."
@@ -173,16 +193,20 @@ msgstr "segítségtípusok"
 msgid "locations"
 msgstr "helyszínek"
 
-#: scheduler/views.py:76
+#: scheduler/views.py:97
 msgid "The submitted data was invalid."
 msgstr "A megadott adat érvénytelen volt."
 
-#: scheduler/views.py:89
+#: scheduler/views.py:110
 #, python-brace-format
-msgid "We can't add you to this shift because you've already agreed to other shifts at the same time: {conflicts}"
-msgstr "Nem adhatunk hozzá ehhez a műszakhoz, mert már beleegyeztél másik műszakokhoz ugyanebben az időben: {conflicts}"
+msgid ""
+"We can't add you to this shift because you've already agreed to other shifts "
+"at the same time: {conflicts}"
+msgstr ""
+"Nem adhatunk hozzá ehhez a műszakhoz, mert már beleegyeztél másik "
+"műszakokhoz ugyanebben az időben: {conflicts}"
 
-#: scheduler/views.py:94
+#: scheduler/views.py:115
 msgid "You were successfully added to this shift."
 msgstr "Sikeresen hozzáadtunk ehhez a műszakhoz."
 
@@ -208,18 +232,22 @@ msgstr "e-mail"
 
 #: templates/home.html:88
 #, python-format
-msgid "Already %(volunteer_count)s volunteers signed up and worked %(volunteer_hours)s hours in total."
+msgid ""
+"Already %(volunteer_count)s volunteers signed up and worked "
+"%(volunteer_hours)s hours in total."
 msgstr ""
 
 #: templates/home.html:49
-#, python-format
 msgid "Info and registration"
 msgstr "Súgó és feliratkozás"
 
 #: templates/home.html:55
-#, python-format
 msgid "Login"
 msgstr "Belépés"
+
+#: templates/home.html:62
+msgid "Frequently Asked Questions"
+msgstr "Gyakran Ismételt Kérdések"
 
 #: templates/registration/password_change_done.html:3
 msgid "Password changed"
@@ -252,8 +280,12 @@ msgstr "A jelszó-visszaállítás kész."
 
 #: templates/registration/password_reset_complete.html:7
 #, python-format
-msgid "Your password has been reset! You may now <a href=\"%(login_url)s\">log in</a>."
-msgstr "A jelszavát visszaállítottuk. Mostmár <a href=\"%(login_url)s\">bejelentkezhet</a>."
+msgid ""
+"Your password has been reset! You may now <a href=\"%(login_url)s\">log in</"
+"a>."
+msgstr ""
+"A jelszavát visszaállítottuk. Mostmár <a href=\"%(login_url)s"
+"\">bejelentkezhet</a>."
 
 #: templates/registration/password_reset_confirm.html:3
 msgid "Enter new password"
@@ -269,31 +301,38 @@ msgstr "Jelszó visszaállítás"
 
 #: templates/registration/password_reset_done.html:6
 msgid "We sent you an email with a link to reset your password."
-msgstr "Elküldtünk önnek egy e-mailt egy hivatkozással, amivel visszaállíthatja a jelszavát."
+msgstr ""
+"Elküldtünk önnek egy e-mailt egy hivatkozással, amivel visszaállíthatja a "
+"jelszavát."
 
 #: templates/registration/password_reset_done.html:7
 msgid "Please check your email and click the link to continue."
-msgstr "Kérem, ellenőrizze az e-mailjét és kattintson a hivatkozásra a folytatáshoz."
+msgstr ""
+"Kérem, ellenőrizze az e-mailjét és kattintson a hivatkozásra a folytatáshoz."
 
 #: templates/registration/password_reset_email.html:3
 #, python-format
 msgid ""
 "You are receiving this email because you (or someone pretending to be you)\n"
-"requested that your password be reset on the %(domain)s site.  If you do not\n"
+"requested that your password be reset on the %(domain)s site.  If you do "
+"not\n"
 "wish to reset your password, please ignore this message.\n"
 "\n"
-"To reset your password, please click the following link, or copy and paste it\n"
+"To reset your password, please click the following link, or copy and paste "
+"it\n"
 "into your web browser:"
 msgstr ""
 "Ezt az e-mailt azért kapta, mert ön (vagy valaki az ön nevében)\n"
 "\n"
-"azt ön jelszavának a visszaállítását kérte a %(domain)s weboldalon. Ha nem szeretné\n"
+"azt ön jelszavának a visszaállítását kérte a %(domain)s weboldalon. Ha nem "
+"szeretné\n"
 "\n"
 "visszaállítani a jelszavát, kérem hagyja figyelmen kívül ezt az üzenetet.\n"
 "\n"
 "\n"
 "\n"
-"A jelszava visszaállításához kattintson a következő hivatkozásra, vagy másolja ki és illessze be\n"
+"A jelszava visszaállításához kattintson a következő hivatkozásra, vagy "
+"másolja ki és illessze be\n"
 "a böngészőjébe:"
 
 #: templates/registration/password_reset_email.html:12
@@ -325,7 +364,8 @@ msgstr "Elfelejtette a jelszavát?"
 
 #: templates/registration/password_reset_form.html:7
 msgid "No Problem! We'll send you instructions on how to reset your password."
-msgstr "Semmi gond! Elküldjük önnek, hogy hogyan állíthatja vissza a jelszavát."
+msgstr ""
+"Semmi gond! Elküldjük önnek, hogy hogyan állíthatja vissza a jelszavát."
 
 #: volunteer_planner/settings/base.py:131
 msgid "German"
